# bookster

./: .gitignore  README.md  pyproject.toml
.github/workflows/: demo.yml
bookster/data/: template.lua  template.tex
examples/book-1/: book.yml  chapter-1.md  chapter-2.md  chapter-3.md
examples/book-2/: book.yml
examples/book-2/appendix/: index.md
examples/book-2/chapters/: chapter-1.md  chapter-10.md  chapter-11.md  chapter-12.md  chapter-2.md  chapter-3.md  chapter-4.md  chapter-5.md  chapter-6.md  chapter-7.md  chapter-8.md  chapter-9.md
examples/book-2/epilogue/: index.md
examples/book-2/glossary/: index.md
examples/book-2/prologue/: index.md
lib/bookster/: main.py
lib/bookster/data/: template.tex
