[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bookster"
version = "0.1.0"
requires-python = ">=3.0"

[project.scripts]
bookster = "bookster.main:main"

[tool.setuptools.package-data]
bookster = ["data/**/*"]

[tool.setuptools]
packages = ["bookster"]
include-package-data = true
